<resources>
    <string name="app_name">CommentOn</string>
    <string name="login_text">Login</string>
    <string name="registration_text">Registration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="description">Description</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_registration">Registration</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="error_invalid_password">Password should contain at least 8 characters</string>
    <string name="error_field_required">This field is empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="user_already_registered">Email already registered</string>
    <string name="unknown_exception">Unknown exception occured, please try again</string>
    <string name="check_your_email">Check your email</string>
    <string name="check_your_password">Check your password</string>
    <string name="comment_placeholder">Comment</string>
    <string name="post_button">Post</string>
    <string name="btn_try_again">try again</string>

    <string name="posting_comment_failed" >Posting comment failed with status code %0%d .</string>
    <string name="post_failed_try_again">Posting failed try again later</string>
    <string name="get_comments_failed_try_again">Could not get comments. Please try again !</string>
</resources>
